--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
             <ul class="aside_navigation list none"> 
                 <li><a class="up" herf="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-                <li><a href= "tel: +52 55 5529 6000" ></a>+52 55 5529 6000</li>
+                <li><a href= "tel:+525555296000" >+52 55 5529 6000</a></li>
             </ul>
         </nav>
     </header>
@@ -86,21 +86,18 @@
 
 <footer>
 <div>
-    <adress>
     <a class="logo up none" href="./index.html"> WebStudio     </a>
+    <adress>
+    
     <ul class="list none">
         <li> <a class="up none" href="https://www.google.com/maps" target="_blank"> Calz Ticomán 500, Ciudad de México, CDMX, México </a></li>
-        <li><a class="up" herf="mailto:info@example.com"></a>info@example.com</li>
-        <li><a href= "tel:+52 55 55296000"></a>+52 55 55296000</li>
+        <li><a class="up" herf="mailto:info@example.com">info@example.com</a></li>
+        <li><a href= "tel:+525555296000">+52 55 55296000</a></li>
     
     </ul>
     </adress>
 </div>
 
-<div>
-    <p>ENCUENTRANOS EN:</p>
-
-</div>
 </footer>
 
 </body>
