--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
 
 <footer>
     <a class="logo up none" href="./index.html"> WebStudio </a>
-    <adress>
+    <address>
       <ul class="aside_navigation list">
         <li>
           <a
@@ -112,7 +112,7 @@
         </li>
         <li><a href="tel:+525555296000">+52 55 55296000</a></li>
       </ul>
-    </adress>
+    </address>
   </footer>
 </body>
 </html>
