--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <footer>
       <a class="logo up none" href="./index.html"> WebStudio </a>
-      <adress>
+      <address>
         <ul class="aside_navigation list">
           <li>
             <a
@@ -177,7 +177,7 @@
           </li>
           <li><a href="tel:+525555296000">+52 55 55296000</a></li>
         </ul>
-      </adress>
+      </address>
     </footer>
   </body>
 </html>
